# Skye.vim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
autoload/: skye.vim
doc/: Skye.txt
plugin/: skye.vim
src/: CMakeLists.txt
src/skye/: DynamicExposure.cpp  GitHubConnector.cpp  GitHubConnector.hpp  QueryEngine.cpp  QueryEngine.hpp  SiteAdapter.hpp
src/skye/util/: Strings.hpp
